# trust-sentinel

./: .gitignore  Cargo.toml  README.md  create_shortcut.ps1  start.bat  startup.vbs
.github/workflows/: build.yml
daemon/: Cargo.toml
daemon/src/: main.rs  main.rs.bak
daemon/src/web/: settings.html
target2/: .rustc_info.json
target2/release/: trust-sentinel-daemon.d
target2/release/.fingerprint/aho-corasick-201ecc36758e6f2c/: lib-aho_corasick.json
target2/release/.fingerprint/anstream-b3e026306345e6ef/: lib-anstream.json
target2/release/.fingerprint/anstyle-90753c2a3dcce7df/: lib-anstyle  lib-anstyle.json
target2/release/.fingerprint/anstyle-query-19ab16606eefd7ec/: lib-anstyle_query.json
target2/release/.fingerprint/anstyle-wincon-2ed73e2f9be179d7/: lib-anstyle_wincon  lib-anstyle_wincon.json
target2/release/.fingerprint/autocfg-53ab10f49ccf368b/: lib-autocfg.json
target2/release/.fingerprint/cfg-if-9b7bd3f3ba0d9f37/: lib-cfg_if
target2/release/.fingerprint/chrono-3427d43e3abe023b/: lib-chrono
target2/release/.fingerprint/colorchoice-d12aea29efa003c5/: lib-colorchoice  lib-colorchoice.json
target2/release/.fingerprint/cpufeatures-ba080169cc6f2c50/: lib-cpufeatures  lib-cpufeatures.json
target2/release/.fingerprint/digest-0e511193f51033b5/: lib-digest  lib-digest.json
target2/release/.fingerprint/env_filter-bafb4ec7c37bd4ef/: lib-env_filter  lib-env_filter.json
target2/release/.fingerprint/hex-8b3d10120f9ff598/: lib-hex
target3/: .rustc_info.json
target3/release/: trust-sentinel-daemon.d
tray/: Cargo.toml
tray/src/: main.rs
(+145 files in other folders)
