[package]
name = "trust-sentinel-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hmac = "0.12"
hex-literal = "0.4"